2010-09-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeJumpTable): fixed bug 3069862
	* support/regression/tests/bug2947189.c: new, added

2010-09-18 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/cmd.c:
	  fixed warning: suggest explicit braces to avoid ambiguous ‘else’

2010-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/doc/sdccman.lyx:
	  Minor update in ANSI conformance section.

2010-09-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (ast_print): fixed for MSVC
	* src/SDCCicode.c (geniCodeJumpTable): fixed bug 2947189
	* support/librarian/sdcclib.c: test return values of system and fgets

2010-09-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/_divulong.c, device/lib/_decdptr.c, device/lib/_divuint.c,
	  device/lib/pic16/libsdcc/long/divulong.c,
	  device/lib/pic16/libsdcc/int/divuint.c,
	  device/lib/pic16/libsdcc/char/divuchar.c,
	  device/lib/hc08/_divuint.c, device/lib/hc08/_divulong.c,
	  device/lib/hc08/_mullong.c:
	  sdcc library license changed to GPL+LE

2010-09-13 Raphael Neider <rneider AT web.de>

	* configure.in, custom_in.h:
	  revive support for big-endian machines, broken since r5954
	* sim/ucsim/configure.in, sim/ucsim/custom.h, sim/ucsim/custom_in.h:
	  have configure create custom.h next to ddconfig.h in the build tree
	  so that CPP will find it
	* configure, sdccconf_in.h, sim/ucsim/configure,
	  sim/ucsim/ddconfig_in.h: regenerated

2010-09-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libc/utils/cvtdec.S,
	  device/lib/pic16/libc/stdlib/g_ftoa.S:
	  sdcc library license changed to GPL+LE

2010-09-12 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/cmd.c, src/SDCCpeeph.c, src/SDCChasht.c,
	  src/SDCCval.c, src/SDCCicode.c, src/SDCCset.c, src/SDCCglue.c,
	  src/z80/gen.c, src/pic16/pcodepeep.c, src/pic16/pcoderegs.c,
	  src/pic16/pcode.c, src/SDCCast.c, sdas/asranlib/asranlib.c,
	  support/makebin/makebin.c, support/Util/findme.c: